src/objects/NokiaCPQ_Estimate_date_with_PortfolioObj__c.object
<CustomObject>
    <fields>
        <fullName>Estimate_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Estimate Date</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Currency__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Master Currency</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <label>Portfolio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Portfolio_New</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>abbreviation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>abbreviation</label>
        <length>245</length>
        <type>Text</type>
    </fields>
    <label>Estimate date with Portfolio</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Estimate date with Portfolio Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Estimate date with Portfolios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>